overflow and url repeating issue fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,10 +22,12 @@
   }
 }
 
+html,
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: var(--font-kumbh), ui-sans-serif, system-ui;
+  overflow-x: hidden;
 }
 
 @utility scrollbar-hide {
